added get games and categories route